Исправление по комментариям

--- a/source/index.html
+++ b/source/index.html
@@ -15,22 +15,22 @@
         </button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
-            <li class="main-nav__list__item main-nav__list__item--active">
+            <li class="main-nav__item main-nav__item--active">
               <a>
                 Главная
               </a>
             </li>
-            <li class="main-nav__list__item">
+            <li class="main-nav__item">
               <a href="photo.html">
                 Фото и видео
               </a>
             </li>
-            <li class="main-nav__list__item">
+            <li class="main-nav__item">
               <a href="form.html">
                 Форма отзыва
               </a>
             </li>
-            <li class="main-nav__list__item">
+            <li class="main-nav__item">
               <a href="#">
                 HTML Academy
               </a>
@@ -41,30 +41,30 @@
     </header>
     <main class="page-main">
       <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
-      <section class="intro-background">
+      <section class="intro">
         <h2 class="visually-hidden">Welcome to the gorgeous Sedona!</h2>
       </section>
       <section class="promo">
-        <h3 class="promo__title">
+        <p class="promo__title">
           Седона &mdash; небольшой городок в Аризоне, заслуживающий большего!
-        </h3>
+        </p>
         <p class="promo__description">
           Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!
         </p>
       </section>
       <section class="features">
         <h2 class="visually-hidden">Причины нас посетить</h2>
-        <div class="features-accent">
-          <div class="features-accent__text">
-            <h3 class="features-accent__title">
+        <div class="features-numbered features-numbered--accent">
+          <div class="features-numbered__text">
+            <h3 class="features-numbered__title">
               Настоящий городок
             </h3>
             <span>&mdash; №1 &mdash;</span>
-            <p class="features-accent__description">
+            <p class="features-numbered__description">
               Седона - не аттракцион для туристов, там течет своя жизнь
             </p>
           </div>
-          <div class="features-accent__image"></div>
+          <div class="features-numbered__image"></div>
         </div>
         <ul class="features__list">
           <li class="features__item features__item--accomodation">
@@ -92,43 +92,43 @@
             </p>
           </li>
         </ul>
-        <div class="features-accent">
-          <div class="features-accent__text">
-            <h3 class="features-accent__title">
+        <div class="features-numbered features-numbered--accent">
+          <div class="features-numbered__text">
+            <h3 class="features-numbered__title">
               Там есть Мост Дьявола
             </h3>
             <span>&mdash; №2 &mdash;</span>
-            <p class="features-accent__description">
+            <p class="features-numbered__description">
               Да, по нему можно пройти! Если конечно вы осмелитесь, конечно
             </p>
           </div>
-          <div class="features-accent__image"></div>
+          <div class="features-numbered__image"></div>
         </div>
-        <ul class="features__list">
-          <li class="features__item features__item--grey">
-            <h3 class="features__title">
+        <ul class="features-numbered">
+          <li class="features-numbered__item features-numbered__item--grey">
+            <h3 class="features-numbered__title">
               Небольшая площадь
             </h3>
             <span>&mdash; №3 &mdash;</span>
-            <p class="features__description">
+            <p class="features-numbered__description">
               Все интересные места находятся очень близко
             </p>
           </li>
-          <li class="features__item features__item--grey">
-            <h3 class="features__title">
+          <li class="features-numbered__item features-numbered__item--grey">
+            <h3 class="features-numbered__title">
               Красивая дорога
             </h3>
             <span>&mdash; №4 &mdash;</span>
-            <p class="features__description">
+            <p class="features-numbered__description">
               Ехать в Седону из Лас-Вегаса совсем не скучно!
             </p>
           </li>
-          <li class="features__item features__item--grey">
-            <h3 class="features__title">
+          <li class="features-numbered__item features-numbered__item--grey">
+            <h3 class="features-numbered__title">
               Мало туристов
             </h3>
             <span>&mdash; №5 &mdash;</span>
-            <p class="features__description">
+            <p class="features-numbered__description">
               Большинство едет в Гранд Каньон и толпится там
             </p>
           </li>
@@ -143,23 +143,23 @@
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--twitter" href="#">
-              Мы в Твиттере
+              <span class="visually-hidden">Мы в Твиттере</span>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--facebook" href="#">
-              Мы в Фейсбуке
+              <span class="visually-hidden">Мы в Фейсбуке</span>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--youtube" href="#">
-              Мы на Youtube
+              <span class="visually-hidden">Мы на Youtube</span>
             </a>
           </li>
         </ul>
       </div>
       <div class="page-footer__copyright copyright">
-        <p class="copyright__text"></p>
+        <p class="copyright__text">Разработано</p>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
       </div>
     </footer>
