Исправление по комментариям

--- a/source/photo.html
+++ b/source/photo.html
@@ -15,22 +15,22 @@
         </button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
-            <li class="main-nav__list__item">
+            <li class="main-nav__item">
               <a href="index.html">
                 Главная
               </a>
             </li>
-            <li class="main-nav__list__item main-nav__list__item--active">
+            <li class="main-nav__item main-nav__item--active">
               <a>
                 Фото и видео
               </a>
             </li>
-            <li class="main-nav__list__item">
+            <li class="main-nav__item">
               <a href="form.html">
                 Форма отзыва
               </a>
             </li>
-            <li class="main-nav__list__item">
+            <li class="main-nav__item">
               <a href="#">
                 HTML Academy
               </a>
@@ -41,11 +41,11 @@
     </header>
     <main class="page-main">
       <h1 class="visually-hidden">Фото и видео</h1>
-      <section class="top-background"></section>
+      <section class="top"></section>
       <section class="promo">
-        <h3 class="promo__title">
+        <h2 class="promo__title">
           Фото и видео
-        </h3>
+        </h2>
         <p class="promo__description">
           Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.
         </p>
@@ -54,25 +54,31 @@
         <div class="photo-card">
           <figure class="photo__container">
             <img src="img/photo-1.jpg" width="280" height="280" alt="Неродные просторы">
+            <figcaption>
+              <p class="photo__title">Неродные просторы</p>
+              <p class="photo__author">Автор фото: Борис</p>
+            </figcaption>
           </figure>
-          <p class="photo__title">Неродные просторы</p>
-          <p class="photo__author">Автор фото: Борис</p>
           <button class="photo__like" type="button"><span class="photo__like__number">1350</span></button>
         </div>
         <div class="photo-card">
           <figure class="photo__container">
             <img src="img/photo-2.jpg" width="280" height="280" alt="Местная растительность">
+            <figcaption>
+              <p class="photo__title">Местная растительность</p>
+              <p class="photo__author">Автор фото: Сергей</p>
+            </figcaption>
           </figure>
-          <p class="photo__title">Местная растительность</p>
-          <p class="photo__author">Автор фото: Сергей</p>
           <button class="photo__like" type="button"><span class="photo__like__number">143</span></button>
         </div>
         <div class="photo-card">
           <figure class="photo__container">
             <img src="img/photo-3.jpg" width="280" height="280" alt="Дорога на север">
+            <figcaption>
+              <p class="photo__title">Дорога на север</p>
+              <p class="photo__author">Автор фото: Петр</p>
+            </figcaption>
           </figure>
-          <p class="photo__title">Дорога на север</p>
-          <p class="photo__author">Автор фото: Петр</p>
           <button class="photo__like" type="button"><span class="photo__like__number">96</span></button>
         </div>
         <div class="photo-card">
@@ -85,9 +91,9 @@
         </div>
       </section>
       <section class="promo">
-        <h3 class="promo__title">
+        <h2 class="promo__title">
           Все еще сомневаетесь?
-        </h3>
+        </h2>
         <p class="promo__description">
           Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!
         </p>
@@ -101,23 +107,23 @@
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--twitter" href="#">
-              Мы в Твиттере
+              <span class="visually-hidden">Мы в Твиттере</span>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--facebook" href="#">
-              Мы в Фейсбуке
+              <span class="visually-hidden">Мы в Фейсбуке</span>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--youtube" href="#">
-              Мы на Youtube
+              <span class="visually-hidden">Мы на Youtube</span>
             </a>
           </li>
         </ul>
       </div>
       <div class="page-footer__copyright copyright">
-        <p class="copyright__text"></p>
+        <p class="copyright__text">Разработано</p>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
       </div>
     </footer>
