--- a/source/photo.html
+++ b/source/photo.html
@@ -2,12 +2,13 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <link href="css/style.css" rel="stylesheet">
     <title>HTML Academy: Седона</title>
   </head>
   <body class="page__body">
     <header class="page-header">
       <a class="page-header__logo" href="index.html">
-        <img src="img/logotype-mobile.svg" width="102" height="84" alt="Седона">
+        <img src="img/logo-sedona-mobile.svg" width="102" height="84" alt="Седона">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">
@@ -53,41 +54,43 @@
       <section class="photo">
         <div class="photo-card">
           <figure class="photo__container">
-            <img src="img/photo-1.jpg" width="280" height="280" alt="Неродные просторы">
+            <img src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="Неродные просторы">
             <figcaption>
               <p class="photo__title">Неродные просторы</p>
               <p class="photo__author">Автор фото: Борис</p>
             </figcaption>
           </figure>
-          <button class="photo__like" type="button"><span class="photo__like__number">1350</span></button>
+          <button class="photo__like" type="button"></button><span class="photo__like__number">1350</span>
         </div>
         <div class="photo-card">
           <figure class="photo__container">
-            <img src="img/photo-2.jpg" width="280" height="280" alt="Местная растительность">
+            <img src="img/photo-cactus-mobile@1x.jpg" width="280" height="280" alt="Местная растительность">
             <figcaption>
               <p class="photo__title">Местная растительность</p>
               <p class="photo__author">Автор фото: Сергей</p>
             </figcaption>
           </figure>
-          <button class="photo__like" type="button"><span class="photo__like__number">143</span></button>
+          <button class="photo__like" type="button"></button><span class="photo__like__number">143</span>
         </div>
         <div class="photo-card">
           <figure class="photo__container">
-            <img src="img/photo-3.jpg" width="280" height="280" alt="Дорога на север">
+            <img src="img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="Дорога на север">
             <figcaption>
               <p class="photo__title">Дорога на север</p>
               <p class="photo__author">Автор фото: Петр</p>
             </figcaption>
           </figure>
-          <button class="photo__like" type="button"><span class="photo__like__number">96</span></button>
+          <button class="photo__like" type="button"></button><span class="photo__like__number">96</span>
         </div>
         <div class="photo-card">
           <figure class="photo__container">
-            <img src="img/photo-4.jpg" width="280" height="280" alt="Мост дьявола">
+            <img src="img/photo-bridge-mobile@1x.jpg" width="280" height="280" alt="Мост дьявола">
+            <figcaption>
+              <p class="photo__title">Мост дьявола</p>
+              <p class="photo__author">Автор фото: Антон</p>
+            </figcaption>
           </figure>
-          <p class="photo__title">Мост дьявола</p>
-          <p class="photo__author">Автор фото: Антон</p>
-          <button class="photo__like" type="button"><span class="photo__like__number">254</span></button>
+          <button class="photo__like" type="button"></button><span class="photo__like__number">254</span>
         </div>
       </section>
       <section class="promo">
@@ -124,7 +127,9 @@
       </div>
       <div class="page-footer__copyright copyright">
         <p class="copyright__text">Разработано</p>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <span class="visually-hidden">HTML Academy</span>
+        </a>
       </div>
     </footer>
   </body>
