--- a/source/form.html
+++ b/source/form.html
@@ -2,12 +2,13 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <link href="css/style.css" rel="stylesheet">
     <title>HTML Academy: Седона</title>
   </head>
   <body class="page__body">
     <header class="page-header">
       <a class="page-header__logo" href="index.html">
-        <img src="img/logotype-mobile.svg" width="" height="" alt="">
+        <img src="img/logo-sedona-mobile.svg" width="102" height="84" alt="Седона">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">
@@ -122,7 +123,7 @@
               Опишите подробно свои восторги
             </textarea>
           </fieldset>
-          <button class="review-form__button" type="submit">Отправить отзыв</button>
+          <button class="review-form__button button" type="submit">Отправить отзыв</button>
         </form>
       </section>
     </main>
@@ -151,7 +152,9 @@
       </div>
       <div class="page-footer__copyright copyright">
         <p class="copyright__text">Разработано</p>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <span class="visually-hidden">HTML Academy</span>
+        </a>
       </div>
     </footer>
   </body>
