--- a/source/photo.html
+++ b/source/photo.html
@@ -17,7 +17,7 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
             <li class="main-nav__item">
-              <a href="index.html">
+              <a class="main-nav__item-link" href="index.html">
                 Главная
               </a>
             </li>
@@ -27,12 +27,12 @@
               </a>
             </li>
             <li class="main-nav__item">
-              <a href="form.html">
+              <a class="main-nav__item-link" href="form.html">
                 Форма отзыва
               </a>
             </li>
             <li class="main-nav__item">
-              <a href="#">
+              <a class="main-nav__item-link" href="#">
                 HTML Academy
               </a>
             </li>
@@ -60,7 +60,7 @@
               <p class="photo__author">Автор фото: Борис</p>
             </figcaption>
           </figure>
-          <button class="photo__like" type="button"></button><span class="photo__like__number">1350</span>
+          <button class="photo__like" type="button" aria-label="Оценить фото"></button><span class="photo__like-number">1350</span>
         </div>
         <div class="photo-card">
           <figure class="photo__container">
@@ -70,7 +70,7 @@
               <p class="photo__author">Автор фото: Сергей</p>
             </figcaption>
           </figure>
-          <button class="photo__like" type="button"></button><span class="photo__like__number">143</span>
+          <button class="photo__like" type="button" aria-label="Оценить фото"></button><span class="photo__like-number">143</span>
         </div>
         <div class="photo-card">
           <figure class="photo__container">
@@ -80,7 +80,7 @@
               <p class="photo__author">Автор фото: Петр</p>
             </figcaption>
           </figure>
-          <button class="photo__like" type="button"></button><span class="photo__like__number">96</span>
+          <button class="photo__like" type="button" aria-label="Оценить фото"></button><span class="photo__like-number">96</span>
         </div>
         <div class="photo-card">
           <figure class="photo__container">
@@ -90,7 +90,7 @@
               <p class="photo__author">Автор фото: Антон</p>
             </figcaption>
           </figure>
-          <button class="photo__like" type="button"></button><span class="photo__like__number">254</span>
+          <button class="photo__like" type="button" aria-label="Оценить фото"></button><span class="photo__like-number">254</span>
         </div>
       </section>
       <section class="promo">
