--- a/source/form.html
+++ b/source/form.html
@@ -17,12 +17,12 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
             <li class="main-nav__item">
-              <a href="index.html">
+              <a class="main-nav__item-link" href="index.html">
                 Главная
               </a>
             </li>
             <li class="main-nav__item">
-              <a href="photo.html">
+              <a class="main-nav__item-link" href="photo.html">
                 Фото и видео
               </a>
             </li>
@@ -32,7 +32,7 @@
               </a>
             </li>
             <li class="main-nav__item">
-              <a href="#">
+              <a class="main-nav__item-link" href="#">
                 HTML Academy
               </a>
             </li>
@@ -119,11 +119,9 @@
           </fieldset>
           <fieldset class="review-form__wrapper">
             <legend class="review-form__title">Опишите свои эмоции:</legend>
-            <textarea class="review-form__area" name="review-text">
-              Опишите подробно свои восторги
-            </textarea>
+            <textarea class="review-form__area" name="review-text">Опишите подробно свои восторги</textarea>
           </fieldset>
-          <button class="review-form__button button" type="submit">Отправить отзыв</button>
+          <button class="review-form__button button" type="submit" aria-label="Отправить отзыв">Отправить отзыв</button>
         </form>
       </section>
     </main>
