--- a/source/index.html
+++ b/source/index.html
@@ -22,17 +22,17 @@
               </a>
             </li>
             <li class="main-nav__item">
-              <a href="photo.html">
+              <a class="main-nav__item-link" href="photo.html">
                 Фото и видео
               </a>
             </li>
             <li class="main-nav__item">
-              <a href="form.html">
+              <a class="main-nav__item-link" href="form.html">
                 Форма отзыва
               </a>
             </li>
             <li class="main-nav__item">
-              <a href="#">
+              <a class="main-nav__item-link" href="#">
                 HTML Academy
               </a>
             </li>
