--- a/source/form.html
+++ b/source/form.html
@@ -2,6 +2,7 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
     <title>HTML Academy: Седона</title>
   </head>
@@ -53,75 +54,80 @@
       </section>
       <section class="review">
         <form class="review-form" action="https://echo.htmlacademy.ru" method="post">
-          <fieldset class="review-form__wrapper">
-            <legend class="review-form__title">Представьтесь:</legend>
+          <fieldset class="review-form__fieldset review-form__fieldset--personal">
+            <legend class="review-form__title review-form__title--personal">Представьтесь:</legend>
             <p class="review-form__item">
-              <label for="name">Имя*:</label>
-              <input id="name" type="text" name="name" required>
+              <label class="review-form__label" for="name">Имя*:</label>
+              <input class="review-form__input" id="name" type="text" name="name" required>
             </p>
             <p class="review-form__item">
-              <label for="surname">Фамилия*:</label>
-              <input id="surname" type="text" name="surname" required>
+              <label class="review-form__label" for="surname">Фамилия*:</label>
+              <input class="review-form__input" id="surname" type="text" name="surname" required>
             </p>
             <p class="review-form__item">
-              <label for="second-name">Отчество:</label>
-              <input id="second-name" type="text" name="second-name">
-            </p>
-          </fieldset>
-          <fieldset class="review-form__wrapper">
-            <legend class="review-form__title">Контактная информация:</legend>
-            <p class="review-form__item">
-              <label for="contact-phone">Контактный телефон*:</label>
-              <input id="contact-phone" type="tel" name="contact-phone">
-            </p>
-            <p class="review-form__item">
-              <label for="contact-mail">Электронная почта*:</label>
-              <input id="contact-mail" type="email" name="contact-mail">
+              <label class="review-form__label" for="second-name">Отчество:</label>
+              <input class="review-form__input" id="second-name" type="text" name="second-name">
             </p>
           </fieldset>
-          <fieldset class="review-form__wrapper">
-            <legend class="review-form__title">Ваше общее впечатление:</legend>
+          <fieldset class="review-form__fieldset review-form__fieldset--contacts">
+            <legend class="review-form__title review-form__title--contacts">Контактная информация:</legend>
+            <div class="review-form__wrapper review-form__wrapper--contacts">
+              <p class="review-form__item review-form__item--contacts">
+                <label class="review-form__label review-form__label--contacts" for="phone">Контактный телефон*:</label>
+                <input class="review-form__input review-form__input--contacts" id="phone" type="tel" name="phone">
+              </p>
+              <p class="review-form__item review-form__item--contacts">
+                <label class="review-form__label review-form__label--contacts" for="mail">Электронная почта*:</label>
+                <input class="review-form__input review-form__input--contacts" id="mail" type="email" name="mail">
+              </p>
+            </div>
+          </fieldset>
+          <fieldset class="review-form__fieldset review-form__fieldset--impression">
+            <legend class="review-form__title review-form__title--impression">Ваше общее впечатление:</legend>
             <ul>
-              <li class="review-form__radio">
-                <input class="visually-hidden" type="radio" name="opinion" id="positive">
-                <label for="positive">Скорее положительное</label>
+              <li class="review-form__item review-form__item--impression">
+                <input class="review-form__radio visually-hidden" type="radio" name="opinion" id="positive">
+                <label class="review-form__radio-label" for="positive">Скорее положительное</label>
               </li>
-              <li class="review-form__radio">
-                <input class="visually-hidden" type="radio" name="opinion" id="negative">
-                <label for="negative">Скорее отрицательное</label>
+              <li class="review-form__item review-form__item--impression">
+                <input class="review-form__radio visually-hidden" type="radio" name="opinion" id="negative">
+                <label class="review-form__radio-label" for="negative">Скорее отрицательное</label>
               </li>
-              <li class="review-form__radio">
-                <input class="visually-hidden" type="radio" name="opinion" id="no-answer">
-                <label for="no-answer">Затрудняюсь ответить</label>
+              <li class="review-form__item review-form__item--impression">
+                <input class="review-form__radio visually-hidden" type="radio" name="opinion" id="no-answer">
+                <label class="review-form__radio-label" for="no-answer">Затрудняюсь ответить</label>
               </li>
             </ul>
           </fieldset>
-          <fieldset class="review-form__wrapper">
-            <legend class="review-form__title">Посещенные достопримечательности:</legend>
-            <ul>
-              <li class="review-form__checkbox">
-                <input class="visually-hidden" type="checkbox" name="devil-bridge" id="devil-bridge">
-                <label for="devil-bridge">Мост дьявола</label>
+          <fieldset class="review-form__fieldset review-form__fieldset--sights">
+            <legend class="review-form__title review-form__title--sights">Посещенные достопримечательности:</legend>
+            <ul class="review-form__wrapper review-form__wrapper--sights">
+              <li class="review-form__item review-form__item--sights">
+                <input class="review-form__checkbox visually-hidden" type="checkbox" name="devil-bridge" id="devil-bridge">
+                <label class="review-form__checkbox-label" for="devil-bridge">Мост дьявола</label>
               </li>
-              <li class="review-form__checkbox">
-                <input class="visually-hidden" type="checkbox" name="bell-mountain" id="bell-mountain">
-                <label for="bell-mountain">Гора-колокол</label>
+              <li class="review-form__item review-form__item--sights">
+                <input class="review-form__checkbox visually-hidden" type="checkbox" name="bell-mountain" id="bell-mountain">
+                <label class="review-form__checkbox-label" for="bell-mountain">Гора-колокол</label>
               </li>
-              <li class="review-form__checkbox">
-                <input class="visually-hidden" type="checkbox" name="slide-park" id="slide-park">
-                <label for="slide-park">Слайд-парк</label>
+              <li class="review-form__item review-form__item--sights">
+                <input class="review-form__checkbox visually-hidden" type="checkbox" name="slide-park" id="slide-park">
+                <label class="review-form__checkbox-label" for="slide-park">Слайд-парк</label>
               </li>
-              <li class="review-form__checkbox">
-                <input class="visually-hidden" type="checkbox" name="red-rocks" id="red-rocks">
-                <label for="red-rocks">Красные скалы</label>
+              <li class="review-form__item review-form__item--sights">
+                <input class="review-form__checkbox visually-hidden" type="checkbox" name="red-rocks" id="red-rocks">
+                <label class="review-form__checkbox-label" for="red-rocks">Красные скалы</label>
               </li>
             </ul>
           </fieldset>
-          <fieldset class="review-form__wrapper">
-            <legend class="review-form__title">Опишите свои эмоции:</legend>
+          <fieldset class="review-form__fieldset review-form__fieldset--emotion">
+            <legend class="review-form__title review-form__title--emotion">Опишите свои эмоции:</legend>
             <textarea class="review-form__area" name="review-text">Опишите подробно свои восторги</textarea>
           </fieldset>
-          <button class="review-form__button button" type="submit" aria-label="Отправить отзыв">Отправить отзыв</button>
+          <div class="review-form__submit">
+            <button class="review-form__button button" type="submit" aria-label="Отправить отзыв">Отправить отзыв</button>
+            <span class="review-form__legend">* - Обязательные поля</span>
+          </div>
         </form>
       </section>
     </main>
