--- a/source/index.html
+++ b/source/index.html
@@ -2,6 +2,7 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
     <title>HTML Academy: Седона</title>
   </head>
@@ -65,7 +66,7 @@
               Седона - не аттракцион для туристов, там течет своя жизнь
             </p>
           </div>
-          <div class="features-numbered__image"></div>
+          <div class="features-numbered__image features-numbered__image--left"></div>
         </div>
         <ul class="features__list">
           <li class="features__item features__item--accomodation">
@@ -103,7 +104,7 @@
               Да, по нему можно пройти! Если конечно вы осмелитесь, конечно
             </p>
           </div>
-          <div class="features-numbered__image"></div>
+          <div class="features-numbered__image features-numbered__image--right"></div>
         </div>
         <ul class="features-numbered">
           <li class="features-numbered__item features-numbered__item--grey">
@@ -134,6 +135,18 @@
             </p>
           </li>
         </ul>
+      </section>
+      <section class="search">
+        <h2 class="search__title">
+          Заинтересовались?
+        </h2>
+        <p class="search__description">
+          Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне.
+        </p>
+        <a class="search__button button" href="#">Найти гостиницу</a>
+      </section>
+      <section class="map">
+        <h2 class="visually-hidden">Где мы находимся?</h2>
       </section>
     </main>
     <footer class="page-footer">
