--- a/source/photo.html
+++ b/source/photo.html
@@ -2,6 +2,7 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
     <title>HTML Academy: Седона</title>
   </head>
@@ -52,54 +53,79 @@
         </p>
       </section>
       <section class="photo">
-        <div class="photo-card">
+        <div class="photo-card photo-card--main">
           <figure class="photo__container">
             <img src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="Неродные просторы">
             <figcaption>
-              <p class="photo__title">Неродные просторы</p>
-              <p class="photo__author">Автор фото: Борис</p>
+              <div class="photo__description">
+                <p class="photo__title">Неродные просторы</p>
+                <p class="photo__author">Автор фото: Борис</p>
+              </div>
+              <div class="photo__rating">
+                <button class="photo__like" type="button" aria-label="Оценить фото"></button><span class="photo__like-number">1350</span>
+              </div>
             </figcaption>
           </figure>
-          <button class="photo__like" type="button" aria-label="Оценить фото"></button><span class="photo__like-number">1350</span>
         </div>
-        <div class="photo-card">
+        <div class="photo-card photo-card--secondary">
           <figure class="photo__container">
             <img src="img/photo-cactus-mobile@1x.jpg" width="280" height="280" alt="Местная растительность">
             <figcaption>
-              <p class="photo__title">Местная растительность</p>
-              <p class="photo__author">Автор фото: Сергей</p>
+              <div class="photo__description">
+                <p class="photo__title">Местная растительность</p>
+                <p class="photo__author">Автор фото: Сергей</p>
+              </div>
+              <div class="photo__rating">
+                <button class="photo__like" type="button" aria-label="Оценить фото"></button><span class="photo__like-number">143</span>
+              </div>
             </figcaption>
           </figure>
-          <button class="photo__like" type="button" aria-label="Оценить фото"></button><span class="photo__like-number">143</span>
         </div>
-        <div class="photo-card">
+        <div class="photo-card photo-card--secondary">
           <figure class="photo__container">
             <img src="img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="Дорога на север">
             <figcaption>
-              <p class="photo__title">Дорога на север</p>
-              <p class="photo__author">Автор фото: Петр</p>
+              <div class="photo__description">
+                <p class="photo__title">Дорога на север</p>
+                <p class="photo__author">Автор фото: Петр</p>
+              </div>
+              <div class="photo__rating">
+                <button class="photo__like" type="button" aria-label="Оценить фото"></button><span class="photo__like-number">96</span>
+              </div>
             </figcaption>
           </figure>
-          <button class="photo__like" type="button" aria-label="Оценить фото"></button><span class="photo__like-number">96</span>
         </div>
-        <div class="photo-card">
+        <div class="photo-card photo-card--secondary">
           <figure class="photo__container">
             <img src="img/photo-bridge-mobile@1x.jpg" width="280" height="280" alt="Мост дьявола">
             <figcaption>
-              <p class="photo__title">Мост дьявола</p>
-              <p class="photo__author">Автор фото: Антон</p>
+              <div class="photo__description">
+                <p class="photo__title">Мост дьявола</p>
+                <p class="photo__author">Автор фото: Антон</p>
+              </div>
+              <div class="photo__rating">
+                <button class="photo__like" type="button" aria-label="Оценить фото"></button><span class="photo__like-number">254</span>
+              </div>
             </figcaption>
           </figure>
-          <button class="photo__like" type="button" aria-label="Оценить фото"></button><span class="photo__like-number">254</span>
         </div>
       </section>
-      <section class="promo">
-        <h2 class="promo__title">
-          Все еще сомневаетесь?
-        </h2>
-        <p class="promo__description">
-          Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!
-        </p>
+      <section class="video">
+        <div class="video__text">
+          <h2 class="video__title">
+            Все еще сомневаетесь?
+          </h2>
+          <p class="video__description">
+            Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!
+          </p>
+        </div>
+        <div class="video__container">
+          <img class="video__image" src="img/video-mobile@1x.jpg" width="320" height="201" alt="Видеопрезентация">
+          <div class="video-controls video-controls__panel">
+            <div class="video-controls__scale"></div>
+            <div class="video-controls__buttons"></div>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="page-footer">
